tests/lang_callable/generics/twrong_generic_object_2.nim
discard """
  errormsg: "'Generic' is not a concrete type"
  line: 8
"""

type
  NonGeneric = object
    field: Generic

  Generic[T] = object